padding body on mobile fixed

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   color: #525252;
   width: 80%;
   margin: 0 auto;
+  padding-bottom: 50%;
 }
 
 .active { 
@@ -43,6 +44,10 @@ a { font-size: 0.9em; color: #5568ce; }
   /* For mobile phones: */
   [class*="col-"] {
     width: 100%;
+  }
+
+  body {
+    width: 90%;
   }
 }
 
@@ -162,11 +167,7 @@ a:visited  {
     margin-right: auto;
     margin-top: 1.5%;
   }
-    
-  body {
-    width: 100%;
-  }
-    
+
   .container {
     width: 90%;
   }
